fixed carousel item align to top

--- a/exam_v-1.0/src/css/_steps.scss
+++ b/exam_v-1.0/src/css/_steps.scss
@@ -232,6 +232,7 @@
 			display: inline-block;
 			width: 300px;
 			height: 405px;
+			vertical-align: top;
 			&:nth-child(3){
 				margin: 0 13px;
 			}
